<resources>
    <string name="skip">跳过</string>
    <string name="app_name">ConfessionWall</string>
    <string name="follow">关注</string>
    <string name="message">消息</string>
    <string name="hot">热门</string>
    <string name="me">我</string>
    <string name="exit_login">退出登录</string>
    <string name="login">登录</string>
    <string name="log_in">登录中。。。</string>
    <string name="login_success">登录成功</string>
    <string name="retrieve">忘记密码？</string>
    <string name="forget_email">请输入注册的邮箱</string>
    <string name="reset">重置密码</string>
    <string name="resetting">重置中。。。</string>
    <string name="reset_success">重置密码请求成功，请到邮箱重置密码</string>
    <string name="quick_register">快捷注册</string>
    <string name="register">注册</string>
    <string name="registering">注册中。。。</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="name_too_short">用户名太短</string>
    <string name="password_too_short">密码太短</string>
    <string name="password_again">请再次输入密码</string>
    <string name="password_not_matching">两次密码不匹配</string>
    <string name="email">邮箱（用于找回密码）</string>
    <string name="email_wrong_format">邮箱格式不正确</string>
    <string name="register_success">注册请求成功，请到邮箱确认注册</string>
    <string name="default_icon">http://bmob-cdn-15551.b0.upaiyun.com/2017/12/12/9ed135bf40caa8ee809748322132596a.png</string>
    <string name="load_icon_failed">加载头像失败</string>
    <string name="detailed">详细信息</string>
    <string name="head_icon">头像</string>
    <string name="phone_number">手机号码</string>
    <string name="create_time">创建时间</string>
    <string name="email_text">邮箱</string>
    <string name="dynamic">动态</string>
    <string name="add_follow">+关注</string>
    <string name="followed">已关注</string>
    <string name="oneself">本人</string>
    <string name="cancel_follow">取消关注</string>
    <string name="success_followed">关注成功</string>
    <string name="over_operation_warning">休息一下再操作吧</string>
    <string name="comment">评论</string>
    <string name="like">点赞</string>
    <string name="liked">已点赞</string>
    <string name="success_liked">点赞成功</string>
    <string name="cancel_like">取消赞</string>
    <string name="is_you">介系你寄几哦~</string>
    <string name="please_login">请登录后进行此项操作</string>
    <string name="no_post_warning">没有帖子哦，赶紧发表一条吧！</string>
    <string name="yes">是的</string>
    <string name="cancel">取消</string>
    <string name="publish">发表</string>
    <string name="edit_comment">编辑评论</string>
    <string name="comment_cannot_be_null">评论不能为空</string>
    <string name="success_commented">评论成功</string>
    <string name="collection">收藏</string>
    <string name="success_collection">收藏成功</string>
    <string name="delete">删除</string>
    <string name="delete_dynamic">删除动态</string>
    <string name="confirm_delete">确定删除动态？</string>
    <string name="success_delete">成功删除动态</string>
    <string name="find_no_comment">没有评论哦，评价一下吧</string>
    <string name="add">添加</string>
    <string name="add_post">添加动态</string>
    <string name="share_dynamic">分享你的动态</string>
    <string name="content_cannot_be_null">内容不能为空</string>
    <string name="success_published">发表成功</string>
    <string name="data_preference">data</string>
    <string name="my_msg">my_msg</string>
    <string name="is_closed">is_closed</string>
    <string name="blur_background">毛玻璃效果背景</string>
    <string name="me_background">我的背景</string>
    <string name="splash_imageview">splash界面过度背景</string>
    <string name="like_image">点赞图像</string>
    <string name="menu_button">菜单按钮</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="once_more_for_exit">再点一次退出程序哦</string>
    <string name="top">置顶</string>
    <string name="send">发送</string>
</resources>
