<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/add_comment_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_comment"
            android:textSize="@dimen/text_title_size"/>

        <TextView
            android:id="@+id/add_comment_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/publish"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <EditText
        android:id="@+id/add_comment_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_padding"
        android:minHeight="@dimen/toolbar_height"
        android:background="@drawable/edit_background"/>

</LinearLayout>
