<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dynamic_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        app:navigationIcon="@drawable/left_arrow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dynamic"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/dynamic_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dynamic_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.zzapp.confessionwall.view.CircleImageView
                    android:id="@+id/dynamic_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:id="@+id/dynamic_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/elevation"/>

            </LinearLayout>

            <TextView
                android:id="@+id/dynamic_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:textIsSelectable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/comment_user_icon_width"
                android:text="详情"/>

            <TextView
                android:id="@+id/dynamic_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/dynamic_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="@color/colorDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/dynamic_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/comment"/>

        <ImageView
            android:layout_width="@dimen/divider_width"
            android:layout_height="match_parent"
            android:background="@color/colorDivider"/>

        <TextView
            android:id="@+id/dynamic_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/like"/>

    </LinearLayout>

</LinearLayout>
